fix: add css toggle for dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,13 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     min-height: 100%;
+    color-scheme: light;
     @apply font-sans;
+  }
+
+  html:has(#dark-mode-toggle:checked) {
+    color-scheme: dark;
+    @apply bg-zinc-950 text-zinc-100;
   }
 
   body {
@@ -20,6 +26,10 @@
     overflow-x: hidden;
     font-family: inherit;
     @apply m-0 bg-white p-0 leading-normal text-inherit;
+  }
+
+  html:has(#dark-mode-toggle:checked) body {
+    @apply bg-zinc-950 text-inherit;
   }
 
   main {
@@ -44,14 +54,6 @@
 
   p {
     @apply mt-6;
-  }
-
-  html.dark {
-    @apply bg-zinc-950 text-zinc-100;
-  }
-
-  body.dark {
-    @apply bg-zinc-950 text-inherit;
   }
 
   ol,
